/*
 * Copyright 2020 Square Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

package squareup.protos.kotlin.serialization.cdn;

option java_package = "com.squareup.wire.protos.kotlin.serialization.cdn";

message CdnResource {
  string url = 1;
  int64 byte_count = 2;
  ContentType content_type = 3;
  bytes data = 4;

  enum ContentType {
    BINARY = 0;
    IMAGE = 1;
    VIDEO = 2;
  }
}
